# meinplugin

./: __init__.py  plugin.py  pyproject.toml  setup.py
inventree_meinplugin/: __init__.py  plugin.py  version.py  views.py
templates/meinplugin/: mein_plugin_seite.html
