# meinplugin/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# ... (alle deine bisherigen [project]-Einträge bleiben unverändert) ...
name = "inventree-meinplugin"
version = "0.1.0" # Oder dynamic = ["version"]
# ... (description, authors, license, etc.) ...

[project.urls]
# ... (deine URLs bleiben unverändert) ...

# --- HIER DIE ÄNDERUNG / ERGÄNZUNG ---
[tool.setuptools]
# Sage setuptools explizit, welches Verzeichnis(se) die Pakete enthalten.
# Der Name muss genau dem Verzeichnisnamen entsprechen, der __init__.py enthält.
packages = ["inventree_meinplugin"]

# Falls du dynamische Versionierung verwendest, sieht dieser Abschnitt evtl. so aus:
# [tool.setuptools.dynamic]
# version = {attr = "inventree_meinplugin.version.PLUGIN_VERSION"}
# --- Ende der Änderung / Ergänzung ---